# ai-pilot-front

./: .drone.yml  .gitignore  Cargo.toml  Dockerfile  Rocket.toml  generate-client.ps1
client/: Cargo.toml
client/src/apis/: configuration.rs  default_api.rs
client/src/models/: ai_pilot.rs  aip_version.rs  error.rs  match_result.rs  mod.rs  start_manual_fight_200_response.rs  team_info.rs  upload_ai_pilot_200_response.rs
migrations/: 20250808131751_initial.sql
public/css/: master.css
src/: api.rs  api_client.rs  api_error.rs  cookie.rs  main.rs  model.rs  sso_client.rs  util.rs
templates/: error.html.hbs  index.html.hbs  login_callback.html.hbs  logout_callback.html.hbs  match.html.hbs  match_create.html.hbs  matches.html.hbs  pilot_stats.html.hbs  upload.html.hbs  user.html.hbs  user_tokens.html.hbs  users.html.hbs
templates/layouts/: main.hbs
templates/partials/: home_matches.html.hbs  home_pilots.html.hbs  navbar.html.hbs  pilot_search_results.html.hbs  pilot_selector.html.hbs  version_stats.html.hbs
