[package]
name = "api-front"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", default-features = false, features = [
    "std",
    "serde",
    "now",
] }
dotenvy = "0.15.7"
handlebars = "6.3.2"
lazy_static = "1.5.0"
log = "0.4.27"
okapi = "0.7.0"
rand = "0.9.1"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["json"] }
rocket = { version = "0.5.1", features = ["json", "secrets", "uuid"] }
rocket_dyn_templates = { version = "0.2.0", features = ["handlebars"] }
rocket_okapi = { version = "0.9.0", features = [
    "rapidoc",
    "rocket_dyn_templates",
] }
schemars = { version = "0.8.22", features = ["chrono", "uuid1"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
simple_logger = "5.0.0"
sqlx = { version = "0.8.6", features = [
    "migrate",
    "macros",
    "runtime-tokio",
    "chrono",
    "sqlite",
] }
uuid = { version = "1.17.0", features = ["v4"] }

client = { path = "./client" }
moka = { version = "0.12.10", features = ["future"] }
