[package]
name = "client"
version = "1.0.0"
authors = ["OpenAPI Generator team and contributors"]
description = "API for managing AIPilot submissions and battle matches"
# Override this license by providing a License Object in the OpenAPI.
license = "Unlicense"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
schemars = { version = "0.8.22", features = ["chrono", "uuid1"] }
reqwest = { version = "^0.12", default-features = false, features = [
    "json",
    "multipart",
] }
